apple/Sources/UniFFI/ant_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
RustBuffer uniffi_ant_ffi_fn_method_datastream_next_chunk(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_clone_derivationindex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_derivationindex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_derivationindex_from_bytes(RustBuffer bytes, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_derivationindex_random(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_ant_ffi_fn_method_derivationindex_to_bytes(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_clone_derivedpubkey(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_derivedpubkey(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_derivedpubkey_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_derivedpubkey_new(void*_Nonnull public_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_derivedpubkey_to_bytes(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_derivedpubkey_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_ant_ffi_fn_method_derivedpubkey_verify(void*_Nonnull ptr, void*_Nonnull signature, RustBuffer msg, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_clone_derivedsecretkey(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_derivedsecretkey(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_derivedsecretkey_new(void*_Nonnull secret_key, RustCallStatus *_Nonnull out_status
);