dart/ant_ffi/lib/src/native/bindings.dart


  late final _uniffi_ant_ffi_fn_method_datastream_next_chunkPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_datastream_next_chunk');
  late final _uniffi_ant_ffi_fn_method_datastream_next_chunk =
      _uniffi_ant_ffi_fn_method_datastream_next_chunkPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_derivationindex(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_derivationindex(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_derivationindexPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_clone_derivationindex');
  late final _uniffi_ant_ffi_fn_clone_derivationindex =
      _uniffi_ant_ffi_fn_clone_derivationindexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_derivationindex(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_derivationindex(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_free_derivationindexPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_free_derivationindex');
  late final _uniffi_ant_ffi_fn_free_derivationindex =
      _uniffi_ant_ffi_fn_free_derivationindexPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void>
      uniffi_ant_ffi_fn_constructor_derivationindex_from_bytes(
    RustBuffer bytes,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_derivationindex_from_bytes(
      bytes,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_derivationindex_from_bytesPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Pointer<ffi.Void> Function(
                      RustBuffer, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_ant_ffi_fn_constructor_derivationindex_from_bytes');
  late final _uniffi_ant_ffi_fn_constructor_derivationindex_from_bytes =
      _uniffi_ant_ffi_fn_constructor_derivationindex_from_bytesPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              RustBuffer, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_derivationindex_random(
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_derivationindex_random(
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_derivationindex_randomPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_constructor_derivationindex_random');
  late final _uniffi_ant_ffi_fn_constructor_derivationindex_random =
      _uniffi_ant_ffi_fn_constructor_derivationindex_randomPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_derivationindex_to_bytes(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_derivationindex_to_bytes(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_derivationindex_to_bytesPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_derivationindex_to_bytes');
  late final _uniffi_ant_ffi_fn_method_derivationindex_to_bytes =
      _uniffi_ant_ffi_fn_method_derivationindex_to_bytesPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_derivedpubkey(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_derivedpubkey(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_derivedpubkeyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_clone_derivedpubkey');
  late final _uniffi_ant_ffi_fn_clone_derivedpubkey =
      _uniffi_ant_ffi_fn_clone_derivedpubkeyPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_derivedpubkey(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_derivedpubkey(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_free_derivedpubkeyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_free_derivedpubkey');
  late final _uniffi_ant_ffi_fn_free_derivedpubkey =
      _uniffi_ant_ffi_fn_free_derivedpubkeyPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_derivedpubkey_from_hex(
    RustBuffer hex,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_derivedpubkey_from_hex(
      hex,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_derivedpubkey_from_hexPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_constructor_derivedpubkey_from_hex');
  late final _uniffi_ant_ffi_fn_constructor_derivedpubkey_from_hex =
      _uniffi_ant_ffi_fn_constructor_derivedpubkey_from_hexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              RustBuffer, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_derivedpubkey_new(
    ffi.Pointer<ffi.Void> public_key,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_derivedpubkey_new(
      public_key,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_derivedpubkey_newPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_constructor_derivedpubkey_new');
  late final _uniffi_ant_ffi_fn_constructor_derivedpubkey_new =
      _uniffi_ant_ffi_fn_constructor_derivedpubkey_newPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_derivedpubkey_to_bytes(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_derivedpubkey_to_bytes(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_derivedpubkey_to_bytesPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_derivedpubkey_to_bytes');
  late final _uniffi_ant_ffi_fn_method_derivedpubkey_to_bytes =
      _uniffi_ant_ffi_fn_method_derivedpubkey_to_bytesPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_derivedpubkey_to_hex(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_derivedpubkey_to_hex(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_derivedpubkey_to_hexPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_derivedpubkey_to_hex');
  late final _uniffi_ant_ffi_fn_method_derivedpubkey_to_hex =
      _uniffi_ant_ffi_fn_method_derivedpubkey_to_hexPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  int uniffi_ant_ffi_fn_method_derivedpubkey_verify(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> signature,
    RustBuffer msg,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_derivedpubkey_verify(
      ptr,
      signature,
      msg,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_derivedpubkey_verifyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int8 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
                  RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_derivedpubkey_verify');
  late final _uniffi_ant_ffi_fn_method_derivedpubkey_verify =
      _uniffi_ant_ffi_fn_method_derivedpubkey_verifyPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer,
              ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_derivedsecretkey(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_derivedsecretkey(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_derivedsecretkeyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_clone_derivedsecretkey');
  late final _uniffi_ant_ffi_fn_clone_derivedsecretkey =
      _uniffi_ant_ffi_fn_clone_derivedsecretkeyPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_derivedsecretkey(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_derivedsecretkey(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_free_derivedsecretkeyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_free_derivedsecretkey');
  late final _uniffi_ant_ffi_fn_free_derivedsecretkey =
      _uniffi_ant_ffi_fn_free_derivedsecretkeyPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_derivedsecretkey_new(
    ffi.Pointer<ffi.Void> secret_key,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_derivedsecretkey_new(
      secret_key,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_derivedsecretkey_newPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_constructor_derivedsecretkey_new');
  late final _uniffi_ant_ffi_fn_constructor_derivedsecretkey_new =
      _uniffi_ant_ffi_fn_constructor_derivedsecretkey_newPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();
